# ascii-read

./: Cargo.toml  README.md
examples/: ascii_lines.rs  read_ascii_line.rs
resources/test/: file.txt
src/: lib.rs
