[package]
authors = ["Mariano Casco <madasbytes@gmail.com>"]
description = "`BufRead`-like methods for reading into an `AsciiString`."
name = "ascii-read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
thiserror = "1.0"
