[package]
name = "ascii-read"
description = "`BufRead`-like methods for reading into an `AsciiString`."
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mdsn/ascii-read"
readme = "README.md"
authors = ["Mariano Casco <madasbytes@gmail.com>"]
keywords = ["ascii", "reader", "string"]

[dependencies]
ascii = "1.1.0"
thiserror = "1.0"
